--- a/style/style.css
+++ b/style/style.css
@@ -125,8 +125,8 @@ body {
 .six .hat {
   position: absolute;
   width: 80px;
-  top: -35px;
-  left: 20.5%;
+  top:  341px;
+  left: 20px;
   /* transform: scale(0.1); */
 }
 
